# NLP-5029

./: .gitignore  main.py  pyproject.toml  test_emoji.py  test_fixes.py
courseNLP/: README.md
courseNLP/Actividades/: best_pipeline_tass_v2.joblib  lexicol_español.py  model_metadata_v2.json  tass_bow_softmax_workshop.ipynb
courseNLP/Actividades/data/: datasetNER.json
courseNLP/Actividades/logic/: __init__.py  feature_extraction.py  lexicon_es.py  text_processing.py
courseNLP/examples/: Custom_Named_Entity_Recognition_with_BERT.ipynb  bow_model.ipynb  clasificador_bert.ipynb  clasificador_reseñas_es.ipynb  customer_service_chatbot.ipynb  ejemplo_NER.ipynb  evaluación_clasificación,.ipynb  pycaret_text_classification.ipynb  tass_bow_softmax_workshop.ipynb  tfidf_model.ipynb  tfidf_nv_imdb.ipynb  training_NER.ipynb  word_tokenization.ipynb
courseNLP/examples/data/: dataset_reseñas_espanol.csv  dataset_sentimientos_500.csv
courseNLP/examples/logic/: __init__.py  feature_extraction.py  (+2 more)
courseNLP/prompt_engineering/: 00_intro.ipynb  01_prompt_structure.ipynb  02_clear_and_direct.ipynb  03_assigning_roles.ipynb  04_separating_data_instructions.ipynb  05_formatting_output_&_speaking_claude.ipynb  06_precognition_thinking.ipynb  07_fewshot_prompting.ipynb  08_avoiding_hallucinations.ipynb
courseNLP/prompting_techniques/: Chain_of-_Thought_DGS.ipynb  FEW_SHOT_PROMPTING.ipynb  Image_Segmentation.ipynb  Program-Aided Lenguage (PAL).ipynb  Prompt_de_conocimiento_generado.ipynb  ReAct_2.ipynb  Retrieval-Augmented Generation.ipynb  Zero-shot COT Prompting.ipynb
(+3 files in other folders)
